updated project, almost finished!

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,10 @@
             </div>
         </article>
     </main>
+
     <button>restart the game</button>
 
-    <script src="../static/script.js"></script>
+    <script src="./../static/script.js"></script>
 </body>
 </html>
+
