--- a/templates/index.html
+++ b/templates/index.html
@@ -10,19 +10,17 @@
 </head>
 <body>
         <!-- Add this inside your <body> tag -->
-    <div class="firstPlayer secondPlayer">
         <div class="modal">
             <div class="modal-content">
-                <p>Waiting for the other player turn...</p>
+                <span>Waiting for the other player turn<span class="dots"></span></span>
             </div>
         </div>
-    </div>
 
     <header>
         <div class="names">
-            <div>Aleksis</div>
+            <div>Alex</div>
             <div>vs</div>
-            <div>Darius</div>
+            <div>Godfrey</div>
         </div>
         <div class="scores">
             <span>0</span>
