modal window appears whenever 1 player is connected that lets you know the 2nd player is comming

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <!-- Add this inside your <body> tag -->
         <div class="modal">
             <div class="modal-content">
-                <span>Waiting for the other player turn<span class="dots"></span></span>
+                <span class="modal-text">Waiting for the other player turn<span class="dots"></span></span>
             </div>
         </div>
 
