--- a/static/styles.css
+++ b/static/styles.css
@@ -112,7 +112,7 @@ a:link {
     left: 0;
     top: 0;
     width: 100vw; /* Full width */
-    height: 100vh; /* Full height */
+    height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -121,7 +121,7 @@ a:link {
 .modal-content {
     background-color: #fefefe;
     margin: 10% auto; /* 15% from the top and centered */
-    max-width: 1115px;
+    max-width: 1315px;
     padding: 50px 20px;
     width: 90%;
     border: 1px solid #888;
