--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
 
     <header>
         <div class="names">
-            <div>Alex</div>
+            <div class="player1">Alex</div>
             <div>vs</div>
-            <div>Godfrey</div>
+            <div class="player2">Godfrey</div>
         </div>
         <div class="scores">
             <span>0</span>
