--- a/templates/index.html
+++ b/templates/index.html
@@ -9,17 +9,27 @@
 </head>
 <body>
 
-    <div class="modal">
+    <div class="nameModal" id="myModal">
+        <div class="nameModal-content">
+            <div class="greetings">Greetings and welcome!</div>
+            <label for="nameInput">You're about to participate in an exciting game of tic-tac-toe with me. The moment you input your name, I'll receive a notification on my app called "ntfy" that someone is waiting for me to join</label>
+            <input type="text" id="nameInput" placeholder="Your Name" oninput="toggleButton()">
+            <button id="saveButton" onclick="saveName()" disabled>Save</button>
+        </div>
+    </div>
+
+    <div class="modal opacity">
         <div class="modal-content">
             <span class="modal-text">Waiting for the other player turn<span class="dots"></span></span>
         </div>
     </div>
 
-    <header>
+
+    <header class="opacity">
         <div class="names">
-            <div class="player1">Alex</div>
+            <div class="player1">Aleksis</div>
             <div>vs</div>
-            <div class="player2">Godfrey</div>
+            <div class="player2">?</div>
         </div>
         <div class="scores">
             <span>0</span>
@@ -27,7 +37,7 @@
             <span>0</span>
         </div>
     </header>
-    <main>
+    <main class="opacity">
         <article class="board">
             <div class="row">
                 <div class="box box1"></div>
@@ -47,7 +57,7 @@
         </article>
     </main>
 
-    <a href="">
+    <a href="" class="opacity">
         <button class="gameButton">restart the game</button>
     </a>
 
