--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="../static/styles.css">
-   <link rel="icon" type="image/png" href="/static/tic-tac-toe.png">
+    <link rel="stylesheet" href="../static/index.css">
+    <link rel="icon" type="image/png" href="/static/tic-tac-toe.png">
 </head>
 <body>
 
@@ -61,7 +61,7 @@
         <button class="gameButton">restart the game</button>
     </a>
 
-    <script src="./../static/script.js"></script>
+    <script src="./../static/index.js"></script>
 
 </body>
 </html>
