--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 
     <header>
         <div class="names">
-            <div class="player1">Aleksis</div>
+            <div class="player1">?</div>
             <div>vs</div>
             <div class="player2">?</div>
         </div>
