--- a/templates/playerName.html
+++ b/templates/playerName.html
@@ -12,8 +12,8 @@
         <div class="nameModal-content">
             <div class="greetings">Greetings and welcome!</div>
             <label for="nameInput">You're about to participate in an exciting game of tic-tac-toe with me. The moment you input your name, I'll receive a notification on my phone that someone is waiting for me to join</label>
-            <input type="text" id="nameInput" placeholder="Your Name" oninput="toggleButton()">
-            <button id="saveButton" onclick="saveName()" disabled>Save</button>
+            <input type="text" id="nameInput" placeholder="Your Name">
+            <button id="saveButton" disabled>Save</button>
         </div>
     </div>
     <script src="./../static/playerName.js"></script>
