--- a/static/index.css
+++ b/static/index.css
@@ -125,6 +125,7 @@ a:link {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    display: block;
 }
 
 .modal-content {
