sending and receiving names succesfully, need to update names without the user clicking on the box

--- a/templates/gameLobby.html
+++ b/templates/gameLobby.html
@@ -31,11 +31,11 @@
             <div>vs</div>
             <div class="player2">?</div>
         </div>
-        <div class="scores">
+        <!-- <div class="scores">
             <span>0</span>
             <span>:</span>
             <span>0</span>
-        </div>
+        </div> -->
     </header>
     <main>
         <article class="board">
@@ -61,7 +61,7 @@
         <button class="gameButton">restart the game</button>
     </a>
 
-    <script src="./../static/index.js"></script>
+    <script src="./../static/gameLobby.js"></script>
 
 </body>
 </html>
