--- a/templates/inputName.html
+++ b/templates/inputName.html
@@ -11,11 +11,11 @@
 <div class="nameModal" id="myModal">
         <div class="nameModal-content">
             <div class="greetings">Greetings and welcome!</div>
-            <label for="nameInput">You're about to participate in an exciting game of tic-tac-toe with me. The moment you input your name, I'll receive a notification on my phone that someone is waiting for me to join</label>
+            <label for="nameInput">You're about to participate in an exciting game of <strong>tic-tac-toe</strong> with me! The moment you input your name, I'll receive a notification on my phone that someone is waiting for me to join</label>
             <input type="text" id="nameInput" placeholder="Your Name">
             <button id="saveButton" disabled>Save</button>
         </div>
     </div>
-    <script src="./../static/playerName.js"></script>
+    <script src="./../static/inputName.js"></script>
 </body>
 </html>
