--- a/templates/inputName.html
+++ b/templates/inputName.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="icon" type="image/png" href="/static/tic-tac-toe.png">
-    <link rel="stylesheet" href="../static/playerName.css">
+    <link rel="stylesheet" href="../static/inputName.css">
 </head>
 <body>
 
