--- a/templates/gameLobby.html
+++ b/templates/gameLobby.html
@@ -22,11 +22,6 @@
             <span class="vs">vs</span>
             <span class="player2">?</span>
         </div>
-        <!-- <div class="scores">
-            <span>0</span>
-            <span>:</span>
-            <span>0</span>
-        </div> -->
     </header>
     <main>
         <article class="board">
@@ -48,11 +43,9 @@
         </article>
     </main>
 
-    <!-- <a href="">
-        <button class="gameButton">restart the game</button>
-    </a> -->
-
-    <button class="logout">Log out</button>
+    <a href="">
+        <button class="restart">restart the game</button>
+    </a>
 
     <script src="./../static/gameLobby.js"></script>
 
