added couple of more stuff, need to implement logout button and whoever wins or lose or tie modal windows

--- a/templates/gameLobby.html
+++ b/templates/gameLobby.html
@@ -43,9 +43,7 @@
         </article>
     </main>
 
-    <a href="">
-        <button class="restart">restart the game</button>
-    </a>
+    <button class="restart">Play again</button>
 
     <script src="./../static/gameLobby.js"></script>
 
