--- a/templates/game.html
+++ b/templates/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="../static/gameLobby.css">
+    <link rel="stylesheet" href="../static/game.css">
     <link rel="icon" type="image/png" href="/static/tic-tac-toe.png">
 </head>
 <body>
@@ -43,9 +43,11 @@
         </article>
     </main>
 
-    <button class="restart">Play again</button>
+    <button class="logout">Log out</button>
 
-    <script src="./../static/gameLobby.js"></script>
+    <button class="playAgain" disabled>Play Again</button>
+
+    <script src="./../static/game.js"></script>
 
 </body>
 </html>
