--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="icon" type="image/png" href="/static/tic-tac-toe.png">
-    <link rel="stylesheet" href="../static/inputName.css">
+    <link rel="stylesheet" href="../static/home.css">
 </head>
 <body>
 
@@ -16,6 +16,6 @@
             <button id="saveButton" disabled>Save</button>
         </div>
     </div>
-    <script src="./../static/inputName.js"></script>
+    <script src="./../static/home.js"></script>
 </body>
 </html>
