--- a/templates/game.html
+++ b/templates/game.html
@@ -18,9 +18,14 @@
 
     <header>
         <div class="names">
-            <span class="player1">?</span>
+            <span class="player1">???</span>
             <span class="vs">vs</span>
-            <span class="player2">?</span>
+            <span class="player2">???</span>
+        </div>
+        <div class="scores">
+            <span class="firstScore">0</span>
+            <span>:</span>
+            <span class="secondScore">0</span>
         </div>
     </header>
     <main>
