--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
             <div class="greetings">Greetings and welcome!</div>
             <label for="nameInput">You're about to participate in an exciting game of <strong>tic-tac-toe</strong> with me! The moment you input your name, I'll receive a notification on my phone that someone is waiting for me to join</label>
             <input type="text" id="nameInput" placeholder="Your Name">
+            <div class="warning"></div>
             <button id="saveButton" disabled>Save</button>
         </div>
     </div>
