updated the title

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tic tac toe</title>
     <link rel="icon" type="image/png" href="/static/tic-tac-toe.png">
     <link rel="stylesheet" href="../static/home.css">
 </head>
